# agora

./: .gitignore  AGORA_PROTOCOL.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RUNNING.md  debate.py  pyproject.toml
agora/: __init__.py  agent.py  backends.py  display.py  health.py  orchestrator.py  protocol.py  save.py  web.py
agora/static/: base.css  base.js  i18n.js
agora/static/lang/: en.json  tr.json
agora/templates/: configs.html  dashboard.html  debate.html  detail.html  history.html
configs/: code_review.yaml  hybrid.yaml  lmstudio_dual.yaml  mlx_offline.yaml  ollama_local.yaml  startup_strategy.yaml  tech_choice.yaml
tests/: test_eventbus.py  test_protocol.py  test_server.py
